--- a/phtc/templates/main/menu.html
+++ b/phtc/templates/main/menu.html
@@ -19,7 +19,7 @@
         {% else %}
         {% for v in is_visited %}
           {% ifequal s.id v.section_id %}
-              {% ifequal v.status incomplete %}
+              {% ifequal v.status "incomplete" %}
               {% else %}
               <a href="{{menu_base}}{{s.get_absolute_url}}">
               {% endifequal %}
