--- a/phtc/templates/base.html
+++ b/phtc/templates/base.html
@@ -3,7 +3,7 @@
 <html lang="en">
 <head>
 	<meta charset="utf-8" />
-	<title>phtc: {% block title %}{% endblock %}</title>
+	<title>{% block title %}{% endblock %} | Lower New York State Public Health Training Center</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="phtc">
   <meta name="author" content="CCNMTL">
