--- a/phtc/templates/registration/login.html
+++ b/phtc/templates/registration/login.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% block title %}Welcome to the PHTC Training Environment{% endblock %}
 {% block content %}
 <div id="welcome">
 	<h2>Welcome to the PHTC Training Environment</h2>
