--- a/phtc/templates/registration/login.html
+++ b/phtc/templates/registration/login.html
@@ -1,8 +1,9 @@
 {% extends "base.html" %}
 {% block title %}Welcome to the PHTC Training Environment{% endblock %}
+{% block noleftsidebar %} class="no-left-sidebar"{% endblock %}
 {% block content %}
-<div id="welcome">
 	<h2>Welcome to the PHTC Training Environment</h2>
+<div id="welcome">
 	
 	<p>But ere this was done, Pip, who had been slily hovering near by all this while, drew nigh to him where he lay, and with soft sobbings, took him by the hand; in the other, holding his tambourine.</p>
 	
