added and error message for invalid logins

--- a/phtc/templates/registration/login.html
+++ b/phtc/templates/registration/login.html
@@ -10,6 +10,10 @@
 	<p>"Poor rover! will ye never have done with all this weary roving? where go ye now? But if the currents carry ye to those sweet Antilles where the beaches are only beat with water-lilies, will ye do one little errand for me? Seek out one Pip, who's now been missing long: I think he's in those far Antilles. If ye find him, then comfort him; for he must be very sad; for look! he's left his tambourine behind;—I found it. Rig-a-dig, dig, dig! Now, Queequeg, die; and I'll beat ye your dying march."</p>
 </div>
 <div id="user_log_in">
+	{% if form.errors%}
+    <p class="errornote"><span><b>ERROR:</b> Invalid username or password.</span> Please try again. Note that both username and password are case-sensitive.</p>
+{% endif %}
+
 	<h3 class="log_in">Please log in</h3>
 
 	<form method="post" action="./?next=/dashboard/" class="well">
