--- a/media/css/main.css
+++ b/media/css/main.css
@@ -95,6 +95,17 @@ p.smalltxt.login
 
 /* special classes */
 
+.errornote {
+    background: url("../img/icon_alert.png") no-repeat 5px 5px #FFEBE8;
+    border: 1px solid #C00;
+    display: block;
+    font-size: 11px !important;
+    margin: 0 0 10px 0;
+    padding: 5px 5px 5px 25px;
+    -moz-border-radius: 3px;
+    -webkit-border-radius: 3px;
+}
+
 .no-left-sidebar #sidebar,
 .no-left-sidebar #sidebarleft {
     display: none;
@@ -105,7 +116,7 @@ p.smalltxt.login
     width: 940px;
     }
     
-    
+
 /* CSS overide special for PHTC */
 
 body {
