--- a/phtc/templates/base.html
+++ b/phtc/templates/base.html
@@ -38,7 +38,7 @@
           {% block topnavbarrightitems %}{% endblock %}
           {% block usernav %}
           {% if request.user.is_anonymous %}
-          <a href="/accounts/login/?next=/dashboard/" class="btn-small btn-primary">Log in</a>
+          <a href="/accounts/login/?next={% url dashboard %}" class="btn-small btn-primary">Log in</a>
           {% else %}
           Hello <span class="user_profile" rel="tooltip" title="View/Edit my profile"><a href="/profile/">{% if request.user.last_name %}{{request.user.first_name}}{% else %}{{request.user.username}}{% endif %}</a></span> <a href="/accounts/logout/?next=/accounts/login/" class="btn-small btn-primary">Log out</a>
           {% endif %}
