beginnign quiz validation

--- a/phtc/templates/quizblock/single_choice.html
+++ b/phtc/templates/quizblock/single_choice.html
@@ -13,7 +13,7 @@
           {% endifequal %}
         {% else %}
           <input name="pageblock-{{block.pageblock.id}}-question{{question.id}}"
-	  value="{{answer.value}}" type="radio" />{{answer.label}}
+	  value="{{answer.label}}" type="radio" />{{answer.label}}
         {% endif %}
       </li>
     {% endif %}
