--- a/phtc/templates/quizblock/quizblock.html
+++ b/phtc/templates/quizblock/quizblock.html
@@ -15,13 +15,14 @@
 	{% if is_submitted  %}
 	{% else %}
 		{% if block.pre_test %}
-			<script src="/site_media/js/pre_test.js"></script>
+			<script src="/site_media/js/required_answers.js"></script>
 		{% endif %}
 	{% endif %}
 	{% if is_submitted  %}
 	{% else %}
 		{% if block.post_test %}
 			<script src="/site_media/js/post_test.js"></script>
+			<script src="/site_media/js/required_answers.js"></script>
 		{% endif %}
 	{% endif %}
 	{% if block.rhetorical %}
