fixed module 1 completion bug - where all parts were completed even though the user did only part 3

--- a/phtc/templates/main/dashboard_panel.html
+++ b/phtc/templates/main/dashboard_panel.html
@@ -67,6 +67,7 @@
 			{% endifequal %}
 		{% endfor %}
 		{% get_user_section_status request.user p as status %}
+		{{ status.status }}
 		{% ifequal status.status "complete" %}
 			<a href="{{ p.get_absolute_url }}">{{ p.label }}</a>
 			<img src="/site_media/img/status_completed.png"/><br class="clear"/>
