--- a/phtc/templates/quizblock/quizblock.html
+++ b/phtc/templates/quizblock/quizblock.html
@@ -15,6 +15,7 @@
 	{% if is_submitted  %}
 	{% else %}
 		{% if block.pre_test %}
+		<script src="/site_media/js/pre_test.js"></script>
 			<script src="/site_media/js/required_answers.js"></script>
 		{% endif %}
 	{% endif %}
